[gd_scene load_steps=34 format=3 uid="uid://dx55thbryydo4"]

[ext_resource type="PackedScene" uid="uid://8kqtrr2s7md4" path="res://Scenes/Enemy/enemy.tscn" id="1_16ocp"]
[ext_resource type="Texture2D" uid="uid://fskk7oq41ani" path="res://Art/all/effects (new)/shadow_slime.png" id="2_df4ue"]
[ext_resource type="Texture2D" uid="uid://nlmamqi0wton" path="res://Art/all/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" id="2_ii0fe"]
[ext_resource type="Script" path="res://Scenes/Enemy/Bosses/slime_boss.gd" id="2_ikof8"]
[ext_resource type="Texture2D" uid="uid://xcxu3tra71lo" path="res://Art/all/enemies/slime/slime_idle_spritesheet.png" id="2_sj40i"]
[ext_resource type="Script" path="res://Scenes/Enemy/Bosses/SimeBossFSM.gd" id="2_umt5b"]
[ext_resource type="Texture2D" uid="uid://dtvxtkgrlsxhf" path="res://Art/all/enemies/slime/slime_run_spritesheeet.png" id="3_788je"]
[ext_resource type="Script" path="res://Scenes/HitBox.gd" id="5_3l7o5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2wl0k"]
atlas = ExtResource("2_ii0fe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3fwb"]
atlas = ExtResource("2_ii0fe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3cap"]
atlas = ExtResource("2_ii0fe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulafv"]
atlas = ExtResource("2_ii0fe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpyb6"]
atlas = ExtResource("2_sj40i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_elsks"]
atlas = ExtResource("2_sj40i")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdo57"]
atlas = ExtResource("2_sj40i")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4v74"]
atlas = ExtResource("2_sj40i")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0ml7"]
atlas = ExtResource("2_sj40i")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlfrg"]
atlas = ExtResource("2_sj40i")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdf48"]
atlas = ExtResource("3_788je")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdw4y"]
atlas = ExtResource("3_788je")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwv8d"]
atlas = ExtResource("3_788je")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l82l"]
atlas = ExtResource("3_788je")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a44jf"]
atlas = ExtResource("3_788je")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrc4m"]
atlas = ExtResource("3_788je")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ewug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wl0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3fwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3cap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulafv")
}],
"loop": true,
"name": &"dead_explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpyb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elsks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdo57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4v74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0ml7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfrg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdf48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdw4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwv8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l82l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a44jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrc4m")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vua3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.701961)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4vjsi"]
resource_name = "dead"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"idle", &"dead_explosion"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.65, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"dupliate_sime"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_jsm64"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_er25h"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tabho"]
resource_name = "jump"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.65, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(2.08165e-12, -8), Vector2(2.08165e-12, -8), Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.737255)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mt83g"]
_data = {
"RESET": SubResource("Animation_vua3s"),
"dead": SubResource("Animation_4vjsi"),
"hurt": SubResource("Animation_jsm64"),
"idle": SubResource("Animation_er25h"),
"jump": SubResource("Animation_tabho")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k1u7b"]
radius = 5.375
height = 16.25

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d31s0"]
radius = 4.0
height = 16.0

[node name="SlimeBoss" instance=ExtResource("1_16ocp")]
scale = Vector2(8, 8)
collision_layer = 4
collision_mask = 3
script = ExtResource("2_ikof8")
ready_chase = false
max_hp = 8
hp = 8

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("2_umt5b")

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
modulate = Color(1, 1, 1, 0.701961)
position = Vector2(5.96046e-08, 4)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_df4ue")

[node name="AnimatedSprite2D" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_7ewug")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, 2)

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_mt83g")
}

[node name="JumpTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
autostart = true

[node name="Hurt" type="Area2D" parent="." index="8"]
collision_layer = 4
collision_mask = 0

[node name="HurtShape" type="CollisionShape2D" parent="Hurt" index="0"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k1u7b")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="HitBox" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_3l7o5")
damage = 2
knockback_force = 3000

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_d31s0")
debug_color = Color(0.944911, 0.192965, 0.354483, 0.419608)

[connection signal="timeout" from="JumpTimer" to="FiniteStateMachine" method="_on_jump_timer_timeout"]
